various fixes to nav & hero layout/spacing

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -64,9 +64,12 @@
 
 /* MEDIUM */
 @media screen and (max-width: 1024px) {
+  .hero-section {
+    margin-top: 0;
+  }
+
   .hero__container {
     flex-direction: column;
-    padding-top: 8rem;
     text-align: center;
   }
 
@@ -99,10 +102,13 @@
 
 /* SMALL */
 @media screen and (max-width: 600px) {
+  .hero-section {
+    margin-top: 0;
+  }
+
   .hero__container {
     flex-direction: column;
     gap: 1rem;
-    padding-top: 4rem;
   }
 
   .hero-section .logo {
