--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,15 +1,10 @@
 nav {
-  /* position: relative; */
-  display: flex block;
-  gap: 1rem;
-  width: max-content;
-  padding-inline: 2rem max(2rem, 5vw);
-
   position: fixed;
   z-index: 222;
   top: 2rem;
   right: 0;
   opacity: 1;
+  width: max-content;
 
   background: rgba(0, 0, 0, 0.2);
   backdrop-filter: blur(5px);
@@ -21,7 +16,6 @@ nav {
 nav ul {
   display: flex block;
   gap: 1rem;
-  width: max-content;
   padding-inline: 2rem max(2rem, 5vw);
 
   background: rgba(0, 0, 0, 0.2);
